Fixed header-subtitle being stuck to header-title

--- a/public/css/landing-page.scss
+++ b/public/css/landing-page.scss
@@ -74,6 +74,7 @@ a:link, a:visited, a:hover, a:active   {
      line-height: 1;
      text-align: center; 
      top: 2%;
+	 padding-top: 10px;
 }  
 
 .profile-pic{
